# weixin-agent-sdk

./: .gitignore  README.md  pyproject.toml
src/wechat_agent_sdk/: __init__.py  bot.py
src/wechat_agent_sdk/agent/: interface.py
src/wechat_agent_sdk/api/: api.py  config_cache.py  session_guard.py  types.py
src/wechat_agent_sdk/auth/: accounts.py  login_qr.py  pairing.py
src/wechat_agent_sdk/cdn/: __init__.py  aes_ecb.py  cdn_upload.py  cdn_url.py  pic_decrypt.py  upload.py
src/wechat_agent_sdk/media/: __init__.py  media_download.py  mime.py  silk_transcode.py
src/wechat_agent_sdk/messaging/: __init__.py  debug_mode.py  error_notice.py  inbound.py  process_message.py  send.py  send_media.py  slash_commands.py
src/wechat_agent_sdk/monitor/: monitor.py
src/wechat_agent_sdk/storage/: state_dir.py  sync_buf.py
src/wechat_agent_sdk/util/: logger.py  random.py  redact.py
